<resources>
    <string name="app_name">PZC</string>
    <string name="register">注册</string>
    <string name="image_logo">图标</string>
    <string name="ic_account">用户名</string>
    <string name="ic_password">密码</string>
    <string name="bt_login">登录</string>
    <string name="et_account_hint">请输入9位用户名</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="tv_register">注册账号</string>
    <string name="tv_spare">｜</string>
    <string name="tv_forgetPassword">忘记密码？</string>

    <string name="err_user_no_exist">用户不存在</string>
    <string name="err_user_exist">用户已存在</string>

    <string name="bt_to_register_page2">下一步</string>
    <string name="bt_back">返回</string>

    <string name="tv_phone">手机号码：</string>

    <string name="register_check_password_hint">请再输入一次密码</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="tv_register_page2_title">完善信息</string>
    <string name="tv_register_page2_name"> 姓名：</string>
    <string name="tv_register_page2_department">系别：</string>
    <string name="tv_register_page2_major">专业：</string>
    <string name="tv_register_page2_classes">班级：</string>
    <string name="register_name_hint">请输入真实姓名</string>
    <string name="register_major_hint">请输入所在专业</string>
    <string name="register_classes_hint">请输入所在班级</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_nav_information">通知</string>
    <string name="bottom_nav_student_union">学生组织</string>
    <string name="bottom_nav_my">我的</string>

    <string name="info_author">作者：</string>
    <string name="info_hits">点击数</string>
    <string name="info_create_time">发布时间：</string>
    <string name="info_start_time">举办/截止时间：</string>
    <string name="info_hold_organization">举办部门：</string>

    <string name="paging_loading">加载中…</string>

    <string name="tab_organization">学生组织</string>
    <string name="tab_activities">活动</string>
    <string name="tab_enroll_member">申请名单</string>
    <string name="tab_member">成员名单</string>

    <string name="info_activities_state">活动状态：</string>
    <string name="info_activities_state_ongoing">进行中</string>
    <string name="info_activities_state_end">已结束</string>
    <string name="info_activities_state_long">长期有效</string>
    <string name="info_activities_enroll">报名</string>
    <string name="info_activities_enrolled">待审核</string>
    <string name="info_activities_enrolled_success">报名成功</string>
    <string name="info_activities_member">报名人员</string>
    <string name="info_activities_summary">总结</string>

    <string name="info_organization_enroll_full">加入部门数量达到上限</string>
    <string name="info_organization_number_of_people_text">部门人数</string>
    <string name="info_organization_enroll_text">纳新状态：</string>
    <string name="info_organization_state_ongoing">纳新中</string>
    <string name="info_organization_state_end">未开始</string>
    <string name="info_organization_member">部门成员</string>
    <string name="info_organization_title">部门名称：</string>
    <string name="info_organization_person_in_charge_title">部门负责人：</string>
    <string name="info_organization_description_title">部门简介：</string>
    <string name="info_organization_person_in_charge_position_title">负责人职位：</string>

    <string name="info_edit">编辑</string>
    <string name="info_save">保存</string>
    <string name="info_sure">确定</string>
    <string name="info_check_save">确认保存？</string>
    <string name="info_cancel">取消</string>

    <string name="info_not_more">没有更多了</string>

    <string name="bt_enroll_refuse">拒绝</string>
    <string name="bt_enroll_ok">同意</string>
    <string name="info_activities_title">活动名称：</string>
    <string name="info_activities_description">活动简介：</string>
    <string name="title_activity_settings">Settings</string>

    <string name="todo">TODO</string>
    <string name="info_my_enroll_organization">我加入的学生组织</string>
    <string name="info_my_hold_activities">我发起的活动</string>
    <string name="info_exit">退出登录</string>
    <string name="info_settings">设置</string>
    <string name="info_my_enroll_activities">我参加的活动</string>
    <string name="tv_settings_update_password">修改密码</string>
    <string name="err_password">密码错误，请重新输入</string>
    <string name="err_empty">账号、密码不能为空！</string>
    <string name="err_input_cannot_empty">输入不能为空</string>
    <string name="fail_register">注册失败，请尝试修改信息或稍后再试</string>
    <string name="err_password_not_equals_check">两次密码输入不一致！</string>
    <string name="err_phone_lenth">请输入正确的手机号码</string>
    <string name="bt_update_phone_num">修改手机号码</string>
    <string name="err_department">输入的系别不存在，请重新输入！</string>
    <string name="et_old_password_hint">请输入旧密码</string>
    <string name="et_new_password_hint">请输入新密码</string>
    <string name="et_check_new_password_hint">请再输入一次新密码</string>
    <string name="info_update_success">修改成功</string>
    <string name="rb_female">女</string>
    <string name="rb_male">男</string>
    <string name="info_gender">性别</string>
    <string name="info_register_success">注册成功！</string>
    <string name="info_loading">加载中...</string>


</resources>
